force-app/main/default/objects/Sentinel_Snapshot__c/Sentinel_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Sentinel Snapshot</label>
    <pluralLabel>Sentinel Snapshots</pluralLabel>
    <description>One row per watched object per day, written by SentinelMonitor. Lets Sentinel answer "what changed since yesterday" and detect Critical counts that persist across days for escalation.</description>
    <nameField>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
        <displayFormat>SNP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>