force-app/main/default/objects/Sentinel_Snapshot__c/fields/Critical_Count__c.field-meta.xml
<CustomField>
    <fullName>Critical_Count__c</fullName>
    <label>Critical Count</label>
    <description>Count of records in the Critical freshness band for this object on this date.</description>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>