force-app/main/default/objects/Sentinel_Snapshot__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <description>Friendly config label at the time of the snapshot (e.g. Active Pipeline).</description>
    <type>Text</type>
    <length>80</length>
</CustomField>