force-app/main/default/objects/Sentinel_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <description>The date this row's counts were captured.</description>
    <type>Date</type>
    <required>true</required>
</CustomField>