force-app/main/default/objects/Sentinel_Snapshot__c/fields/Stale_Count__c.field-meta.xml
<CustomField>
    <fullName>Stale_Count__c</fullName>
    <label>Stale Count</label>
    <description>Total at-risk record count for this object on this date.</description>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>